// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select Component should render a disabled select 1`] = `
<div>
  <div
    class="db-select db-select--disabled db-select--size-l"
  >
    <select
      disabled=""
    />
    <svg
      viewBox="0 0 16 10"
    >
      <path
        d="M1 2l6 6l6-6"
      />
    </svg>
  </div>
  <span
    class="db-inline-spacer"
  >
     
  </span>
</div>
`;

exports[`Select Component should render a select 1`] = `
<div>
  <div
    class="db-select db-select--size-l"
  >
    <select />
    <svg
      viewBox="0 0 16 10"
    >
      <path
        d="M1 2l6 6l6-6"
      />
    </svg>
  </div>
  <span
    class="db-inline-spacer"
  >
     
  </span>
</div>
`;
